# POME

./: README.md  evaluate_inductive_ood.py  example.csv  pyproject.toml
.github/workflows/: tests.yaml
data/splits/hancock/: split_00_test_graph.tsv  split_00_train_graph.tsv  split_01_test_graph.tsv  split_01_train_graph.tsv  split_02_test_graph.tsv  split_02_train_graph.tsv  split_03_test_graph.tsv  split_03_train_graph.tsv  split_04_test_graph.tsv  split_04_train_graph.tsv  split_05_test_graph.tsv  split_05_train_graph.tsv  split_06_test_graph.tsv  split_06_train_graph.tsv  split_07_test_graph.tsv  split_07_train_graph.tsv  split_08_test_graph.tsv  split_08_train_graph.tsv  split_09_test_graph.tsv  split_09_train_graph.tsv
src/pome/: __init__.py  gnn_embedding.py  models.py  utils.py
tests/: test_gnn_embedding.py
