[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pome-py"
version = "1.0"
description = "POME: Partially observed mixed-type data embeddings"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "torch",
    "torch-geometric",
    "networkx"
]
authors = [
  { name = "Fabian Woller"}
]
license = { text = "GPL-3.0-only" }
keywords = ["representation-learning", "graphs", "embeddings", "missing data"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=pome --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/__init__.py",
]
